Fix color contrast and add nutrition display
- Improve ingredient amount colors for better contrast on light/dark backgrounds
- Add nutrition facts shortcode with styling
- Update CLAUDE.md documentation

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,5 +1,11 @@
 {{- $ingredientsCSS := resources.Get "css/ingredients.css" | minify -}}
 <link rel="stylesheet" href="{{ $ingredientsCSS.Permalink }}">
 
+{{- $nutritionCSS := resources.Get "css/nutrition.css" | minify -}}
+<link rel="stylesheet" href="{{ $nutritionCSS.Permalink }}">
+
 {{- $ingredientsJS := resources.Get "js/ingredients.js" | minify -}}
 <script defer src="{{ $ingredientsJS.Permalink }}"></script>
+
+{{- $nutritionJS := resources.Get "js/nutrition.js" | minify -}}
+<script defer src="{{ $nutritionJS.Permalink }}"></script>
