--- a/layouts/shortcodes/nutrition.html
+++ b/layouts/shortcodes/nutrition.html
@@ -1,5 +1,4 @@
 {{- $kj := .Get "kj" | default 0 -}}
-{{- $kcal := .Get "kcal" | default 0 -}}
 {{- $fat := .Get "fat" | default 0 -}}
 {{- $saturated := .Get "saturated" | default 0 -}}
 {{- $carbs := .Get "carbs" | default 0 -}}
@@ -14,12 +13,10 @@
   <p class="nutrition-note">pro <span class="nutrition-portion-label">Portion</span></p>
   <table class="nutrition-table">
     <tbody>
-      {{- if or $kj $kcal }}
-      <tr class="nutrition-row" data-base-kj="{{ $kj }}" data-base-kcal="{{ $kcal }}">
+      {{- if $kj }}
+      <tr class="nutrition-row" data-base="{{ $kj }}">
         <td class="nutrition-label">Brennwert</td>
-        <td class="nutrition-value">
-          <span class="nutrition-kj">{{ $kj }}</span> kJ / <span class="nutrition-kcal">{{ $kcal }}</span> kcal
-        </td>
+        <td class="nutrition-value"><span class="nutrition-amount">{{ $kj }}</span> kJ</td>
       </tr>
       {{- end }}
       {{- if $fat }}
