--- a/layouts/shortcodes/step.html
+++ b/layouts/shortcodes/step.html
@@ -1,12 +1,11 @@
 {{- $image := .Get "image" | default "" -}}
 
 <li class="step">
-  <div class="step-content">
-    <p class="step-text">{{ .Inner }}</p>
-    {{- if $image -}}
-    <figure class="step-image">
-      <img src="{{ $image }}" alt="Step illustration" loading="lazy">
-    </figure>
-    {{- end -}}
-  </div>
+  <span class="step-label"></span>
+  <p class="step-text">{{ .Inner }}</p>
+  {{- if $image -}}
+  <figure class="step-image">
+    <img src="{{ $image }}" alt="Step illustration" loading="lazy">
+  </figure>
+  {{- end -}}
 </li>
