Add full-text search and Posthof Food Coop integration
- Add Pagefind search with German translations
- Add posthofProductID parameter to ingredients for stock/price display
- Fix PaperMod theme JSON-LD breadcrumb bug
- Remove problematic Hugo cache configuration

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -4,6 +4,9 @@
 {{- $nutritionCSS := resources.Get "css/nutrition.css" | minify -}}
 <link rel="stylesheet" href="{{ $nutritionCSS.Permalink }}">
 
+{{- $searchCSS := resources.Get "css/search.css" | minify -}}
+<link rel="stylesheet" href="{{ $searchCSS.Permalink }}">
+
 {{- $ingredientsJS := resources.Get "js/ingredients.js" | minify -}}
 <script defer src="{{ $ingredientsJS.Permalink }}"></script>
 
