--- a/layouts/shortcodes/option.html
+++ b/layouts/shortcodes/option.html
@@ -4,6 +4,7 @@
 {{- $name := .Get "name" -}}
 {{- $plural := .Get "plural" | default $name -}}
 {{- $default := .Get "default" | default "false" -}}
+{{- $posthofProductID := .Get "posthofProductID" | default "" -}}
 
 <option
   data-amount="{{ $amount }}"
@@ -11,6 +12,7 @@
   data-unit="{{ $unit }}"
   data-name="{{ $name }}"
   data-plural="{{ $plural }}"
+  {{ if $posthofProductID }}data-posthof-id="{{ $posthofProductID }}"{{ end }}
   {{ if eq $default "true" }}selected{{ end }}>
   {{- $name -}}
 </option>
