--- a/assets/css/ingredients.css
+++ b/assets/css/ingredients.css
@@ -501,16 +501,23 @@
 .posthof-link,
 .posthof-link:hover,
 .posthof-link:visited,
-.posthof-link:active {
+.posthof-link:active,
+.posthof-link:focus {
   text-decoration: none !important;
-  color: inherit;
-  border: none;
-  box-shadow: none;
-  background: none;
+  color: inherit !important;
+  border: none !important;
+  border-bottom: none !important;
+  box-shadow: none !important;
+  background: none !important;
+  outline: none;
 }
 
 .posthof-link:hover {
   opacity: 0.8;
+}
+
+.posthof-link * {
+  border-bottom: none !important;
 }
 
 .posthof-details {
